// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css prop react basic 1`] = `
.css-xs9rh7 {
  color: red;
  font-size: 1px;
}

<p
  className="css-xs9rh7"
>
  hello world
</p>
`;

exports[`css prop react kitchen sink 1`] = `
.css-o2rzdt {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-12lxyi1 {
  font-size: 6px;
  color: red;
}

.css-bithoy {
  color: blue;
}

.css-1426hi0 {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.css-btxk1p {
  color: red;
  border-radius: 5px;
}

.css-btxk1p:hover {
  font-weight: bold;
  color: gray;
}

<div
  className="css__legacy-stuff css-o2rzdt"
>
  <h1
    className="css-12lxyi1"
  >
    BOOM
  </h1>
  <p
    className="test_class1 css-bithoy"
  >
    Hello
  </p>
  <p
    className="test_class1 test___class45 css-1426hi0"
  >
    World
  </p>
  <p
    className="css-btxk1p"
  >
    hello world
  </p>
</div>
`;

exports[`css prop react string expression 1`] = `
.css-1ylcmay {
  color: red;
  background: blue;
  font-size: 48px;
}

<p
  className="css-1ylcmay"
>
  hello world
</p>
`;
